WFS scripts added

--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
 <div id="mapid"></div> <!-- Must have 'height' in style argument -->
 <script src = "js/leaflet.js"> </script>
 <script src = "js/map.js"> </script> <!--Main Script -->
+<script src = "js/Leaflet-WFST.src.js"> </script> 
+<script src = "js/Leaflet-WFST.min.js"> </script> 
+<script src = "js/leaflet-heat.js"> </script> 
 
 </body>
 </html>
