--- a/index.html
+++ b/index.html
@@ -67,9 +67,10 @@
 
             
 
+            
             <div class="sidebar-pane" id="contact">
                 <h1 class="sidebar-header">Contact<span class="sidebar-close"><i class="fa fa-caret-left"></i></span></h1>
-                <p style="font-family: sans-serif;"><b>Created by:</b> Alicja Balfanz, Nimrod Gavish, Diego Morales, Jeison Londoño, Cristhian Murcia </p>
+                <p style="font-family: sans-serif;"><b>Created by:</b> Alicja Balfanz a_balf01@wwu.de, Nimrod Gavish N_gavi01@wwu.de, Diego Morales d_mora04@wwu.de, Jeison Londoño jeisolon.espi@gmail.com , Cristhian Murcia c_murc01@uni-muenster.de</p>
             </div>
         </div>
     </div>
