add local boroughs layer

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
     </div>
 
 <div id="mapid"></div> <!-- Must have 'height' in style argument -->
-
+<script src="data/london_boroughs_proper.geojson" ></script>
 <script src = "js/map.js"> </script> <!--Main Script -->
  
 
